Source/WebCore/rendering/style/GridTrackSize.h
@@ -102,6 +102,7 @@ public:
         m_maxTrackBreadthIsMaxContent = maxTrackBreadth().isLength() && maxTrackBreadth().length().isMaxContent();
         m_maxTrackBreadthIsMinContent = maxTrackBreadth().isLength() && maxTrackBreadth().length().isMinContent();
         m_maxTrackBreadthIsAuto = maxTrackBreadth().isLength() && maxTrackBreadth().length().isAuto();
+        m_maxTrackBreadthIsFixed = maxTrackBreadth().isLength() && maxTrackBreadth().length().isSpecified();
 
         // These values depend on the above ones so keep them here.
         m_minTrackBreadthIsIntrinsic = m_minTrackBreadthIsMaxContent || m_minTrackBreadthIsMinContent
@@ -123,6 +124,7 @@ public:
     bool hasMinContentMinTrackBreadth() const { return m_minTrackBreadthIsMinContent; }
     bool hasMaxContentMinTrackBreadthAndMaxContentMaxTrackBreadth() const { return m_minTrackBreadthIsMaxContent && m_maxTrackBreadthIsMaxContent; }
     bool hasAutoOrMinContentMinTrackBreadthAndIntrinsicMaxTrackBreadth() const { return (m_minTrackBreadthIsMinContent || m_minTrackBreadthIsAuto) && m_maxTrackBreadthIsIntrinsic; }
+    bool hasFixedMaxTrackBreadth() const { return m_maxTrackBreadthIsFixed; }
 
 private:
     GridTrackSizeType m_type;
@@ -138,6 +140,7 @@ private:
     bool m_maxTrackBreadthIsMinContent : 1;
     bool m_minTrackBreadthIsIntrinsic : 1;
     bool m_maxTrackBreadthIsIntrinsic : 1;
+    bool m_maxTrackBreadthIsFixed : 1;
 };
 
 } // namespace WebCore
